[package]
name = "sirula"
version = "1.0.1"
authors = ["Dorian Rudolph"]
edition = "2018"

[dependencies]
freedesktop_entry_parser = "1.3"
libc = "0.2"
gtk-layer-shell = "0.4"
gtk = { version = "0.15", features = ["v3_22"] }
gio = { version = "0.15", features = ["v2_60"] }
gdk = "0.15"
pango = "0.15"
futures = "0.3"
fuzzy-matcher = "0.3.7"
xdg = "2.4"
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"
regex = "1.10"

[profile.release]
lto = true
